--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "numpy (>=2.3.3,<3.0.0)",
+    "pulp (>=3.3.0,<4.0.0)"
 ]
 
 [tool.poetry]
@@ -16,3 +18,8 @@ packages = [{include = "tastee_aula_2", from = "src"}]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "ipykernel (>=6.30.1,<7.0.0)"
+]
