--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "tastee-aula-2"
+name = "tastee"
 version = "0.1.0"
 description = ""
 authors = [
@@ -13,7 +13,9 @@ dependencies = [
     "matplotlib (>=3.10.7,<4.0.0)",
     "pandas (>=2.3.3,<3.0.0)",
     "pyarrow (>=21.0.0,<22.0.0)",
-    "duckdb (>=1.4.1,<2.0.0)"
+    "duckdb (>=1.4.1,<2.0.0)",
+    "scipy (>=1.16.3,<2.0.0)",
+    "pyomo (>=6.9.5,<7.0.0)"
 ]
 
 [tool.poetry]
