--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "pyarrow (>=21.0.0,<22.0.0)",
     "duckdb (>=1.4.1,<2.0.0)",
     "scipy (>=1.16.3,<2.0.0)",
-    "pyomo (>=6.9.5,<7.0.0)"
+    "pyomo (>=6.9.5,<7.0.0)",
+    "plotly (>=6.5.0,<7.0.0)"
 ]
 
 [tool.poetry]
