--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "duckdb (>=1.4.1,<2.0.0)",
     "scipy (>=1.16.3,<2.0.0)",
     "pyomo (>=6.9.5,<7.0.0)",
-    "plotly (>=6.5.0,<7.0.0)"
+    "plotly (>=6.5.0,<7.0.0)",
+    "nbformat (>=5.10.4,<6.0.0)"
 ]
 
 [tool.poetry]
