--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,10 @@ dependencies = [
     "scipy (>=1.16.3,<2.0.0)",
     "pyomo (>=6.9.5,<7.0.0)",
     "plotly (>=6.5.0,<7.0.0)",
-    "nbformat (>=5.10.4,<6.0.0)"
+    "nbformat (>=5.10.4,<6.0.0)",
+    "scikit-learn (>=1.8.0,<2.0.0)",
+    "tqdm (>=4.67.1,<5.0.0)",
+    "joblib (>=1.5.3,<2.0.0)"
 ]
 
 [tool.poetry]
@@ -25,7 +28,9 @@ packages = [{include = "optimal_power_flow", from = "src"},
             {include = "power", from = "src"}, 
             {include = "metaheuristic", from = "src"},
             {include = "power_flow", from = "src"},
-            {include = "trabalhos_transmissao"}]
+            {include = "trabalhos_transmissao"},
+            {include = "machine_learning", from = "src"},
+            {include = "data_models", from = "src"}]
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.30.1"
