--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "nbformat (>=5.10.4,<6.0.0)",
     "scikit-learn (>=1.8.0,<2.0.0)",
     "tqdm (>=4.67.1,<5.0.0)",
-    "joblib (>=1.5.3,<2.0.0)"
+    "joblib (>=1.5.3,<2.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)"
 ]
 
 [tool.poetry]
